--- a/Ders_Yoldasi/dersyoldasi-api/Dockerfile
+++ b/Ders_Yoldasi/dersyoldasi-api/Dockerfile
@@ -1,13 +1,12 @@
-# dersyoldasi-api/Dockerfile
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py .
+COPY . .
 
-EXPOSE 8000
+EXPOSE 5000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "run.py"]
