--- a/Ders_Yoldasi/dersyoldasi-api/requirements.txt
+++ b/Ders_Yoldasi/dersyoldasi-api/requirements.txt
@@ -1,4 +1,6 @@
-fastapi
-uvicorn
-pydantic
-PyJWT
+flask==3.0.2
+flask-sqlalchemy==3.1.1
+psycopg2-binary==2.9.9
+flasgger==0.9.7.1
+flask-cors==4.0.0
+flask-jwt-extended==4.6.0
